Fixed for a little cover view on mobile

--- a/styles/_animations.scss
+++ b/styles/_animations.scss
@@ -46,6 +46,9 @@ $delays: (0.75s, 1s, 1.25s, 1.5s, 1.75s, 2s, 3s, 3.5s);
       height: 100%;
     }
 
+    99% {
+      height: 100%;
+    }
 
     100% {
       height: initial;
